EXAMPLES/broken_cc.out
"broken_cc.cc", line 15, char 22: More formals than types
broken_cc.cc, line 11: Null dimension
broken_cc.cc, line 16: syntax error
