EXAMPLES/broken_cc.spec
function CC_main();
process spec noparam();
